--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "array-sort": "^1.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "localforage": "^1.10.0",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.4.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
@@ -48,6 +53,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.4",
+    "@types/md5": "^2.3.2",
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
