--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
       }
     ],
     "@typescript-eslint/no-unused-vars": "warn",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "import/prefer-default-export": "warn"
   }
 }
