--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "array-sort": "^1.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "hash.js": "^1.1.7",
     "localforage": "^1.10.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
