--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "shallowequal": "^1.1.0",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -58,6 +59,7 @@
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
+    "@types/shallowequal": "^1.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
