--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "array-sort": "^1.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "deep-equal": "^2.0.5",
     "hash.js": "^1.1.7",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
@@ -24,7 +25,6 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "shallowequal": "^1.1.0",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -55,11 +55,11 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.4",
+    "@types/deep-equal": "^1.0.1",
     "@types/md5": "^2.3.2",
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
-    "@types/shallowequal": "^1.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
